--- a/web-ui/package.json
+++ b/web-ui/package.json
@@ -7,7 +7,7 @@
     "test": "jest",
     "lint": "eslint src",
     "build": "webpack; cp index.html dist",
-    "bundle-prod": "webpack --config webpack.prod.config.js; cp index.html dist/"
+    "bundle-prod": "webpack --config webpack.prod.config.js"
   },
   "keywords": [
     "board",
@@ -20,14 +20,15 @@
     "babel-preset-env": "1.6.0",
     "babel-preset-react": "^6.22.0",
     "babel-preset-stage-0": "^6.22.15",
+    "clean-webpack-plugin": "^0.1.16",
     "eslint": "^4.7.2",
     "eslint-plugin-react": "^7.4.0",
+    "html-webpack-plugin": "^3.2.0",
+    "jest": "*",
+    "json-loader": "*",
     "react-hot-loader": "3.1.3",
     "webpack": "^2.7.0",
-    "webpack-dev-server": "^2.6.1",
-    "clean-webpack-plugin": "^0.1.16",
-    "jest": "*",
-    "json-loader": "*"
+    "webpack-dev-server": "^2.6.1"
   },
   "dependencies": {
     "basic-authorization-header": "^0.2.7",
