--- a/boardgame-ui/package.json
+++ b/boardgame-ui/package.json
@@ -5,7 +5,11 @@
   "dependencies": {
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "valid-url": "*",
+    "basic-authorization-header": "^0.2.7",
+    "flux": "^3.1.2",
+    "node-fetch": "*"
   },
   "scripts": {
     "start": "react-scripts start",
