--- a/boardgame-ui/package.json
+++ b/boardgame-ui/package.json
@@ -7,9 +7,9 @@
     "react-dom": "^16.11.0",
     "react-scripts": "3.2.0",
     "react-list": "*",
-    "react-dnd": "^2.5.4",
-    "react-dnd-html5-backend": "^2.2.0",
-    "react-dnd-touch-backend": "^0.3.20",
+    "react-dnd": "9.4.0",
+    "react-dnd-html5-backend": "9.4.0",
+    "react-dnd-touch-backend": "9.4.0",
     "valid-url": "*",
     "basic-authorization-header": "^0.2.7",
     "flux": "^3.1.2",
