--- a/scala-server/conf/application.conf
+++ b/scala-server/conf/application.conf
@@ -287,7 +287,8 @@ play.filters {
     #pathPrefixes = ["/some/path", ...]
 
     # The allowed origins. If null, all origins are allowed.
-    allowedOrigins = ["http://localhost:3000"]
+    # 3000 is the web UI development server - 5000 is the web UI production server
+    allowedOrigins = ["http://localhost:3000", "http://localhost:5000"]
 
     # The allowed HTTP methods. If null, all methods are allowed
     #allowedHttpMethods = ["GET", "POST"]
