--- a/boardgame-ui/package.json
+++ b/boardgame-ui/package.json
@@ -3,18 +3,19 @@
   "version": "0.9.6",
   "private": true,
   "dependencies": {
+    "@reach/router": "^1.2.1",
+    "basic-authorization-header": "^0.2.7",
+    "detect-it": "*",
+    "flux": "^3.1.2",
+    "node-fetch": "*",
     "react": "^16.11.0",
-    "react-dom": "^16.11.0",
-    "react-scripts": "3.2.0",
-    "react-list": "*",
     "react-dnd": "9.4.0",
     "react-dnd-html5-backend": "9.4.0",
     "react-dnd-touch-backend": "9.4.0",
-    "valid-url": "*",
-    "basic-authorization-header": "^0.2.7",
-    "flux": "^3.1.2",
-    "node-fetch": "*",
-    "detect-it": "*"
+    "react-dom": "^16.11.0",
+    "react-list": "*",
+    "react-scripts": "3.2.0",
+    "valid-url": "*"
   },
   "scripts": {
     "start": "react-scripts start",
