--- a/boardgame-ui/package.json
+++ b/boardgame-ui/package.json
@@ -14,6 +14,7 @@
     "react-dnd-touch-backend": "9.4.0",
     "react-dom": "^16.11.0",
     "react-list": "*",
+    "react-redux": "^7.1.3",
     "react-scripts": "3.2.0",
     "valid-url": "*"
   },
