--- a/boardgame-ui/package.json
+++ b/boardgame-ui/package.json
@@ -3,10 +3,12 @@
   "version": "0.9.6",
   "private": true,
   "dependencies": {
-    "@reach/router": "^1.2.1",
+    "@okta/okta-react": "^1.2.3",
+    "aws-amplify": "^1.2.4",
     "basic-authorization-header": "^0.2.7",
     "detect-it": "*",
     "flux": "^3.1.2",
+    "js-cookie": "^2.2.1",
     "node-fetch": "*",
     "react": "^16.11.0",
     "react-dnd": "9.4.0",
@@ -14,6 +16,7 @@
     "react-dnd-touch-backend": "9.4.0",
     "react-dom": "^16.11.0",
     "react-list": "*",
+    "react-router": "^5.1.2",
     "react-scripts": "3.2.0",
     "valid-url": "*"
   },
@@ -37,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-router-dom": "^5.1.2"
   }
 }
