--- a/haskell-server/boardgame.cabal
+++ b/haskell-server/boardgame.cabal
@@ -59,7 +59,6 @@ library
       Bolour.Util.MiscUtil
       Bolour.Util.Middleware
       Bolour.Util.HttpUtil
-      Bolour.Util.WaiUtil
       Bolour.Util.FileUtil
       Bolour.Util.Empty
       Bolour.Util.BlackWhite
@@ -229,6 +228,8 @@ test-suite infocus
       BoardGame.Server.Domain.ServerParametersSpec
       BoardGame.Server.Domain.CrossWordFinderSpec
       BoardGame.Server.Domain.HopelessBlanksSpec2
+      BoardGame.Server.Service.BaseServiceFixtures
+      BoardGame.Server.Service.ServiceTestFixtures
   default-language: Haskell2010
 
 -- END LIBRARY
